# Scout

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  TODO.md  docker-compose.yml  phase0_reconstruct.py
.github/workflows/: ci.yml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/eval/: __init__.py  cassettes.py  golden_cases.py  run_eval.py
backend/eval/cassettes/: incident.json
backend/migrations/: env.py
backend/migrations/versions/: .gitkeep  9bc194c611f4_init.py  e9bfb22efa19_init.py
backend/scout/: __init__.py  config.py  logging_config.py  models.py  timeutil.py
backend/scout/agent/: __init__.py  detection.py  graph.py  llm.py  mcp_client.py  run.py  taxonomy.py
backend/scout/api/: __init__.py  main.py  metrics.py  persistence.py  queue.py
backend/scout/capture/: __init__.py  backfill.py  db.py  schema.py  seed_demo.py  variant_sync.py  webhooks.py
backend/scout/mcp_server/: __init__.py  data_source.py  server.py  shopify_client.py
backend/scout/notifications/: __init__.py  email.py  slack.py
backend/scripts/: mcp_smoketest.py  register_webhooks.py  scheduler.py  seed_live_history.py  send_test_webhook.py  verify_events.py
backend/tests/: conftest.py  test_api.py  test_detection.py  test_pipeline.py  test_variant_resolution.py  test_webhooks_hmac.py
frontend/: .dockerignore  Dockerfile  README.md  app.py  requirements.txt
web/: package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
web/src/: App.tsx
web/src/lib/: api.ts
web/src/pages/: Investigations.tsx  (+1 more)
(+1 files in other folders)
